# 1111

AI_Agents_System/AI_Agents_System/: __init__.py  manage.py  settings.py  urls.py  wsgi.py
AI_Agents_System/agents/migrations/: __init__.py  admin.py  apps.py  models.py  tests.py
VirtualButler 2/Content/Maps/: MainMap.umap
VirtualButler 2/Content/Models/: ButlerModel.uasset
VirtualButler 2/Saved/: README.md  VirtualButler.uproject
VirtualButler 2/Source/VirtualButler/: ButlerCharacter.cpp  ButlerCharacter.h  TaskAutomation.cpp  TaskAutomation.h  VirtualButler.Build.cs  VirtualButler.cpp  VirtualButler.h  VoiceRecognition.cpp  VoiceRecognition.h
VirtualButler 2/VirtualButler/docs/: CMakeLists.txt  README.md
VirtualButler 2/VirtualButler/include/: butler.h  task_automation.h  voice_recognition.h
VirtualButler 2/VirtualButler/src/: butler.cpp  main.cpp  task_automation.cpp  voice_recognition.cpp
VirtualButler 2/VirtualButler/tests/: test_butler.cpp  test_task_automation.cpp  test_voice_recognition.cpp
integration-tests/: test_api_gateway.js
kong/: config.yml
unified-frontend/src/: App.js
voice-recognition-service/: Dockerfile  voice_recognition_service.py
